--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT = 3000
 MONGODB_URL = "mongodb://127.0.0.1:27017/shortURL"
+Password=ppxW0VDArFqHiJqd
+connection=mongodb+srv://atharvachaudhari4444:ppxW0VDArFqHiJqd@cluster0.raumg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
